// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/List.Element WithCustomCss smoke-test 1`] = `
<ul data-test-block="true">
  <li class="ListElement_element__mEewo dummyClassname">
    Kjenner du behovet til brukeren?
  </li>
</ul>
`;

exports[`Tester/List.Element WithDataTestid smoke-test 1`] = `
<ul data-test-block="true">
  <li class="ListElement_element__mEewo "
      data-testid="ListElementID"
  >
    Kjenner du behovet til brukeren?
  </li>
</ul>
`;

exports[`Tester/List.Element WithId smoke-test 1`] = `
<ul data-test-block="true">
  <li id="ListElementId"
      class="ListElement_element__mEewo "
  >
    Kjenner du behovet til brukeren?
  </li>
</ul>
`;

exports[`Tester/List.Element WithLang smoke-test 1`] = `
<ul data-test-block="true">
  <li class="ListElement_element__mEewo "
      lang="nb"
  >
    Kjenner du behovet til brukeren?
  </li>
</ul>
`;

exports[`Tester/List.Element WithRef smoke-test 1`] = `
<ul data-test-block="true">
  <li class="ListElement_element__mEewo "
      id="dummyIdForwardedFromRef"
  >
    Kjenner du behovet til brukeren?
  </li>
</ul>
`;
